# Tw_stock_ai_scheduler

./: .gitignore  .gitlab-ci.yml  README.md  ai_scheduler.py  batch_news_summary.py  batch_yt_summary.py  pyproject.toml  requirements.txt  run.sh  summaries.py
launchd/: com.twstock.ai-scheduler.plist
test/: test_scheduler.py  test_summaries.py
